--- a/src/components/inputs/demo/combined.html
+++ b/src/components/inputs/demo/combined.html
@@ -57,9 +57,9 @@
     </div>
 
     <script type="module">
-        import { ColorInput } from '../ColorInput/ColorInput.js';
-        import { RangeInput } from '../RangeInput/RangeInput.js';
-        import { DimensionInput } from '../DimensionInput/DimensionInput.js';
+        import { ColorInput } from '../colorInput/colorInput.js';
+        import { RangeInput } from '../rangeInput/rangeInput.js';
+        import { DimensionInput } from '../dimensionInput/dimensionInput.js';
 
         // Color Input Setup
         const colorInput = new ColorInput('--primary-color', '#ff0000', (variable, value) => {
