color input and units dropdowns busted

--- a/src/components/presetManager/demo.html
+++ b/src/components/presetManager/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>PresetManager Demo</title>
-    <link rel="stylesheet" href="PresetManager.css">
+    <link rel="stylesheet" href="./presetManager.css">
     <style>
         #demo {
             max-width: 800px;
